--- a/2d/eindopdracht/index.html
+++ b/2d/eindopdracht/index.html
@@ -3,13 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <video autoplay src="assets/videos/forest.webm" id="videoContainer"></video>
   <br> 
  the house, ello world: 
+ <p id="pitchrepresent">the uh and the pitch</p>
  <script src="index.js"></script>
- <script src="videoChanger.js">
- </script>
+ <script src="videoChanger.js"></script>
+
+
+<input id="range" type="range" min="0" max="1000" value="400"><pre id="log"></pre>
+<canvas id="canvas"></canvas>
+
+<script src="pitchDetection.js"></script>
 </body>
 </html>
