added dual pitch recognition of internal and external audio, working on the motifplayer.

--- a/2d/eindopdracht/index.html
+++ b/2d/eindopdracht/index.html
@@ -6,11 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <video autoplay src="assets/videos/forest.webm" id="videoContainer"></video>
+  <video autoplay src="assets/videos/forest.webm" id="positiveVideoContainer"></video>
+  <video autoplay src="assets/videos/londerSmog.webm" id="negativeVideoContainer"></video>
   <br> 
  the house, ello world: 
  <p id="pitchrepresent">the uh and the pitch</p>
  <script src="index.js"></script>
+
  <script src="videoChanger.js"></script>
 
 
