added the flute motifs at interval.

--- a/2d/eindopdracht/index.html
+++ b/2d/eindopdracht/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <video autoplay src="assets/videos/forest.webm" id="positiveVideoContainer"></video>
-  <video autoplay src="assets/videos/londerSmog.webm" id="negativeVideoContainer"></video>
+  <video  onloadStart="this.volume = 0" autoplay src="assets/videos/londerSmog.webm" id="negativeVideoContainer"></video>
+  
   <br> 
  the house, ello world: 
  <p id="pitchrepresent">the uh and the pitch</p>
