working on extraction, dynamically drawing everything to the page now so i can put them in windows

--- a/2d/eindopdracht/index.html
+++ b/2d/eindopdracht/index.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <video autoplay src="assets/videos/forest.webm" id="positiveVideoContainer"></video>
-  <video  onloadStart="this.volume = 0" autoplay src="assets/videos/londerSmog.webm" id="negativeVideoContainer"></video>
+  <div>
+  <video autoplay src="assets/videos/forest.webm" id="positiveVideoContainer" class="center"></video>
+  <video  onloadStart="this.volume = 0" autoplay src="assets/videos/londerSmog.webm" id="negativeVideoContainer" class="center"></video>
+  </div>
   
   <br> 
  the house, ello world: 
