--- a/2d/test/testingWindows/index.html
+++ b/2d/test/testingWindows/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
+  <div id="videoContainer">
   <video autoplay src="assets/videos/forest.webm" id="positiveVideoContainer" class="center"></video>
   <video  onloadStart="this.volume = 0" autoplay src="assets/videos/londerSmog.webm" id="negativeVideoContainer" class="center"></video>
   </div>
@@ -21,7 +21,9 @@
 
 <input id="range" type="range" min="0" max="1000" value="400"><pre id="log"></pre>
 
+
 <script src="motifPlayer.js"></script>
 <script src="pitchDetection.js"></script>
+<script src="ftAnaliser.js"></script>
 </body>
 </html>
