updating in the morning, no idea what changes im committing

--- a/2d/eindopdracht2/index.html
+++ b/2d/eindopdracht2/index.html
@@ -9,5 +9,6 @@
  hello world
 <script src="videoChanger.js"></script>
 <script src="ftAnaliser.js"></script>
+<script src="motifPlayer.js"></script>
 </body>
 </html>
