added some assets and updated guitarlogic

--- a/2d/eindopdracht2/index.html
+++ b/2d/eindopdracht2/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
- hello world
+ hello world (ed2)
 <script src="videoChanger.js"></script>
 <script src="ftAnaliser.js"></script>
 <script src="motifPlayer.js"></script>
