some final tweaks

--- a/2d/eindopdracht2/index.html
+++ b/2d/eindopdracht2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>also the title</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,5 +10,6 @@
 <script src="videoChanger.js"></script>
 <script src="ftAnaliser.js"></script>
 <script src="motifPlayer.js"></script>
+<!--<script src="ballen.js"></script>-->
 </body>
 </html>
