--- a/2d/eindopdracht2/index.html
+++ b/2d/eindopdracht2/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
  hello world (ed2)
+<script src="starsForGoodBehavior.js"></script>
 <script src="videoChanger.js"></script>
 <script src="ftAnaliser.js"></script>
 <script src="motifPlayer.js"></script>
